--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -135,6 +135,9 @@ jhipster:
         license:
         license-url:
 
+logging:
+    file: target/hr.log
+
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
